--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
         <h1 style="border:solid;">Otávio Nascimento Leal Goes</h1>
     </header>
     <article>
-        Estou fazendo curso de Desenvolvimento de Web, no IOS ()
+        <fieldset>
+            <legend>Sobre mim</legend>
+        <p>Estou fazendo curso de Desenvolvimento de Web, no IOS (Instituto da Oportunidade Social), estou aprendendo mais do que eu esperava, e sim que estou gostando. Meu objetivo com isso quero criar meu site para poder puplicar meus próprios MANGAKÁS.</p><br><br>
+        <p>Também gosto muito de desenhar e criações de personagens que estou planejando para o meu Mangá.</p>
+
+        
+        </fieldset>
     </article>
 </body>
 </html>
